--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fullcalendar/timegrid": "5.11.0",
     "@react-google-maps/api": "2.7.0",
     "antd": "4.18.6",
+    "apexcharts": "^3.35.3",
     "axios": "0.25.0",
     "chart.js": "3.7.0",
     "css-loader": "6.7.1",
@@ -36,7 +37,7 @@
     "postcss-cli": "9.1.0",
     "pug": "3.0.2",
     "react": "17.0.2",
-    "react-apexcharts": "1.3.9",
+    "react-apexcharts": "^1.3.9",
     "react-chartjs-2": "4.0.1",
     "react-cookie": "4.1.1",
     "react-cookies": "0.1.1",
