--- a/package.json
+++ b/package.json
@@ -12,17 +12,18 @@
   "license": "ISC",
   "dependencies": {
     "@ant-design/icons": "4.7.0",
-    "@babel/preset-react": "7.16.7",
+    "@babel/preset-react": "^7.16.7",
     "@craco/craco": "6.4.3",
-    "@fullcalendar/common": "5.11.0",
+    "@fullcalendar/common": "^5.11.0",
     "@fullcalendar/daygrid": "5.11.0",
-    "@fullcalendar/interaction": "5.11.0",
-    "@fullcalendar/react": "5.11.0",
-    "@fullcalendar/timegrid": "5.11.0",
+    "@fullcalendar/interaction": "^5.11.0",
+    "@fullcalendar/react": "^5.11.0",
+    "@fullcalendar/timegrid": "^5.11.0",
     "@react-google-maps/api": "2.7.0",
     "antd": "4.18.6",
     "apexcharts": "^3.35.3",
     "axios": "0.25.0",
+    "babel-plugin-transform-require-ignore": "^0.1.1",
     "chart.js": "3.7.0",
     "css-loader": "6.7.1",
     "faker": "4.1.0",
@@ -31,8 +32,9 @@
     "next": "^12.1.4",
     "next-auth": "4.3.0",
     "next-cookies": "2.0.3",
+    "next-i18next": "^12.1.0",
     "next-redux-wrapper": "6.0.2",
-    "next-transpile-modules": "9.0.0",
+    "next-transpile-modules": "^9.1.0",
     "node-sass": "6.0.1",
     "postcss-cli": "9.1.0",
     "pug": "3.0.2",
